--- a/Sass/Style.scss
+++ b/Sass/Style.scss
@@ -139,7 +139,7 @@
     }
   }
   .last {
-    background-image: url("../pexels-jozef-fehér-2774140\ 1\ \(1\).png");
+    background-image: url("../Img/pexels-jozef-fehér-2774140\ 1\ \(1\).png");
     width: 100%;
     height: 90vh;
     background-size: cover;
