--- a/Sass/Style.css
+++ b/Sass/Style.css
@@ -137,7 +137,7 @@
     width: 445px;
   }
   .last {
-    background-image: url("../pexels-jozef-fehér-2774140 1 (1).png");
+    background-image: url("../Img/pexels-jozef-fehér-2774140 1 (1).png");
     width: 100%;
     height: 90vh;
     background-size: cover;
